Updated doxygen files.

--- a/classCore_1_1IO_1_1MotorControl.html
+++ b/classCore_1_1IO_1_1MotorControl.html
@@ -256,8 +256,7 @@ Protected Types</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1MotorControl_a6c2c814eeba186101329b864df3bfcc3_cgraph.svg" width="370" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1MotorControl_a6c2c814eeba186101329b864df3bfcc3_cgraph.svg" width="370" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -347,8 +346,7 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1MotorControl_a334e005bc613fa4be50eade98f7ea653_cgraph.svg" width="406" height="191"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1MotorControl_a334e005bc613fa4be50eade98f7ea653_cgraph.svg" width="406" height="191"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -546,8 +544,7 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1MotorControl_add4eb4918f1c99f95b10237e6b76741e_cgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1MotorControl_add4eb4918f1c99f95b10237e6b76741e_cgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -591,8 +588,7 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1MotorControl_a2678066417096bd3446fd4024e21cc71_cgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1MotorControl_a2678066417096bd3446fd4024e21cc71_cgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
