--- a/classCore_1_1IO_1_1ServoControl.html
+++ b/classCore_1_1IO_1_1ServoControl.html
@@ -278,8 +278,7 @@ This class sets the motor control class's dutyCyclePulseWidthRange to this class
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1ServoControl_a7bc94ffbe8d0403f06e8e5b6fd59a6b0_cgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1ServoControl_a7bc94ffbe8d0403f06e8e5b6fd59a6b0_cgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -322,8 +321,7 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1ServoControl_a69fb6f10774add593d7f37be10ec8b6a_cgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1ServoControl_a69fb6f10774add593d7f37be10ec8b6a_cgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -377,8 +375,7 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1ServoControl_a81105d5e345bc12bda1ebb2e4cbcc8dc_cgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1IO_1_1ServoControl_a81105d5e345bc12bda1ebb2e4cbcc8dc_cgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
