--- a/classCore_1_1Math_1_1LinearConverter.html
+++ b/classCore_1_1Math_1_1LinearConverter.html
@@ -228,8 +228,7 @@ template&lt;typename DataType&gt; </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1Math_1_1LinearConverter_a9c23dfff74ecda38d7187d10fef90774_icgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1Math_1_1LinearConverter_a9c23dfff74ecda38d7187d10fef90774_icgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -273,8 +272,7 @@ template&lt;typename DataType&gt; </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1Math_1_1LinearConverter_a0edafa0346e994028957ac9f88dacc7e_icgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1Math_1_1LinearConverter_a0edafa0346e994028957ac9f88dacc7e_icgraph.svg" width="406" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
