--- a/classVehicleControl_1_1Bluetooth_1_1Server.html
+++ b/classVehicleControl_1_1Bluetooth_1_1Server.html
@@ -193,8 +193,7 @@ Additional Inherited Members</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Server_a71e526977ad6225f87b2b962820931a9_cgraph.svg" width="384" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Server_a71e526977ad6225f87b2b962820931a9_cgraph.svg" width="384" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -238,8 +237,7 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Server_af5d9733f754be78891f8189f6f63ac90_cgraph.svg" width="1092" height="191"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Server_af5d9733f754be78891f8189f6f63ac90_cgraph.svg" width="1092" height="191"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
