--- a/classCore_1_1Math_1_1Range.html
+++ b/classCore_1_1Math_1_1Range.html
@@ -220,8 +220,7 @@ template&lt;typename DataType &gt; </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1Math_1_1Range_ab7b81c209de373e53d60c408779a7a91_icgraph.svg" width="391" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1Math_1_1Range_ab7b81c209de373e53d60c408779a7a91_icgraph.svg" width="391" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -258,8 +257,7 @@ template&lt;typename DataType &gt; </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1Math_1_1Range_af5aee1ed1d9637f79e7802ffe3db3b62_icgraph.svg" width="391" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1Math_1_1Range_af5aee1ed1d9637f79e7802ffe3db3b62_icgraph.svg" width="391" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
