--- a/classVehicleControl_1_1Bluetooth_1_1Manager.html
+++ b/classVehicleControl_1_1Bluetooth_1_1Manager.html
@@ -194,8 +194,7 @@ Public Member Functions</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Manager_a7f49ac22adfb97732952694307580f68_cgraph.svg" width="386" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Manager_a7f49ac22adfb97732952694307580f68_cgraph.svg" width="386" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -269,8 +268,7 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Manager_ae92751dc904b98458bf42aebe57fffe7_cgraph.svg" width="386" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Manager_ae92751dc904b98458bf42aebe57fffe7_cgraph.svg" width="386" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -305,8 +303,7 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Manager_a01832c6e997c7a249c84e50fb1e1fd09_cgraph.svg" width="386" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Bluetooth_1_1Manager_a01832c6e997c7a249c84e50fb1e1fd09_cgraph.svg" width="386" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
