--- a/classVehicleControl_1_1Control_1_1IOFactory.html
+++ b/classVehicleControl_1_1Control_1_1IOFactory.html
@@ -265,8 +265,7 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_1_1IOFactory_a4d4de0203bf577352199f49c67f49d98_cgraph.svg" width="1018" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_1_1IOFactory_a4d4de0203bf577352199f49c67f49d98_cgraph.svg" width="1018" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
