--- a/dir_586f5b2a9f6dd58bc54f17b6475358e1.html
+++ b/dir_586f5b2a9f6dd58bc54f17b6475358e1.html
@@ -88,8 +88,7 @@ $(document).ready(function(){initNavTree('dir_586f5b2a9f6dd58bc54f17b6475358e1.h
 <div class="dynheader">
 Directory dependency graph for Headers:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="dir_586f5b2a9f6dd58bc54f17b6475358e1_dep.svg" width="563" height="246"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="dir_586f5b2a9f6dd58bc54f17b6475358e1_dep.svg" width="563" height="246"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="subdirs"></a>
