--- a/dir_987148c65bc53438ab99c2dd2af7d909.html
+++ b/dir_987148c65bc53438ab99c2dd2af7d909.html
@@ -88,8 +88,7 @@ $(document).ready(function(){initNavTree('dir_987148c65bc53438ab99c2dd2af7d909.h
 <div class="dynheader">
 Directory dependency graph for BBBLibrary:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="dir_987148c65bc53438ab99c2dd2af7d909_dep.svg" width="259" height="246"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="dir_987148c65bc53438ab99c2dd2af7d909_dep.svg" width="259" height="246"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="subdirs"></a>
