Updated doxygen files.

--- a/classLibBBB_1_1Bluetooth_1_1Manager_1_1Interface.html
+++ b/classLibBBB_1_1Bluetooth_1_1Manager_1_1Interface.html
@@ -93,8 +93,7 @@ $(document).ready(function(){initNavTree('classLibBBB_1_1Bluetooth_1_1Manager_1_
 <div class="dynheader">
 Inheritance diagram for LibBBB::Bluetooth::Manager::Interface:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Bluetooth_1_1Manager_1_1Interface__inherit__graph.svg" width="170" height="131"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Bluetooth_1_1Manager_1_1Interface__inherit__graph.svg" width="170" height="131"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 <center><span class="legend">[<a target="top" href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="pub-methods"></a>
@@ -164,8 +163,7 @@ Public Member Functions</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Bluetooth_1_1Manager_1_1Interface_a41fa850b8fa9d6f9c30dc272d9328a5f_cgraph.svg" width="340" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Bluetooth_1_1Manager_1_1Interface_a41fa850b8fa9d6f9c30dc272d9328a5f_cgraph.svg" width="340" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -197,8 +195,7 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Bluetooth_1_1Manager_1_1Interface_a4d89d1228bf44378c0caf37fddac40dc_icgraph.svg" width="340" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Bluetooth_1_1Manager_1_1Interface_a4d89d1228bf44378c0caf37fddac40dc_icgraph.svg" width="340" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
