--- a/CommunicationProtocolParser_8cpp.html
+++ b/CommunicationProtocolParser_8cpp.html
@@ -98,8 +98,7 @@ $(document).ready(function(){initNavTree('CommunicationProtocolParser_8cpp.html'
 </div><div class="textblock"><div class="dynheader">
 Include dependency graph for CommunicationProtocolParser.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="CommunicationProtocolParser_8cpp__incl.svg" width="1099" height="419"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="CommunicationProtocolParser_8cpp__incl.svg" width="1099" height="419"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="CommunicationProtocolParser_8cpp_source.html">Go to the source code of this file.</a></p>
