--- a/classLibBBB_1_1Bluetooth_1_1Manager.html
+++ b/classLibBBB_1_1Bluetooth_1_1Manager.html
@@ -300,8 +300,7 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Bluetooth_1_1Manager_a060493f898621db59bfda9b7077d759c_icgraph.svg" width="726" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Bluetooth_1_1Manager_a060493f898621db59bfda9b7077d759c_icgraph.svg" width="726" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
