--- a/classVehicleControl_1_1Control_1_1CommunicationProtocolParser.html
+++ b/classVehicleControl_1_1Control_1_1CommunicationProtocolParser.html
@@ -187,14 +187,12 @@ Public Member Functions</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_1_1CommunicationProtocolParser_a518b7eda37805934071cbc4c3dbc4328_cgraph.svg" width="420" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_1_1CommunicationProtocolParser_a518b7eda37805934071cbc4c3dbc4328_cgraph.svg" width="420" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_1_1CommunicationProtocolParser_a518b7eda37805934071cbc4c3dbc4328_icgraph.svg" width="526" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_1_1CommunicationProtocolParser_a518b7eda37805934071cbc4c3dbc4328_icgraph.svg" width="526" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
