--- a/classLibBBB_1_1Bluetooth_1_1Manager.html
+++ b/classLibBBB_1_1Bluetooth_1_1Manager.html
@@ -335,8 +335,7 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Bluetooth_1_1Manager_a2f93bbcf746ab55eaf46ad12451e24fa_icgraph.svg" width="407" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Bluetooth_1_1Manager_a2f93bbcf746ab55eaf46ad12451e24fa_icgraph.svg" width="407" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
