--- a/classVehicleControl_1_1Control.html
+++ b/classVehicleControl_1_1Control.html
@@ -390,8 +390,7 @@ Here is the call graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_af677fb9565407041290bbf7b681802e5_cgraph.svg" width="630" height="223"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_af677fb9565407041290bbf7b681802e5_cgraph.svg" width="630" height="223"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
