--- a/classLibBBB_1_1ThreadHelper.html
+++ b/classLibBBB_1_1ThreadHelper.html
@@ -194,7 +194,8 @@ Static Public Member Functions</h2></td></tr>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1ThreadHelper_a6999e18135496ef252b1c43c374c20f9_icgraph.svg" width="788" height="395"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1ThreadHelper_a6999e18135496ef252b1c43c374c20f9_icgraph.svg" width="788" height="288"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
@@ -261,7 +262,8 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1ThreadHelper_a068eff4b68a89c09c63d8780621b431a_icgraph.svg" width="674" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1ThreadHelper_a068eff4b68a89c09c63d8780621b431a_icgraph.svg" width="674" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 
 </div>
