Updated doxygen files.

--- a/classLibBBB_1_1AnalogToDigitalController.html
+++ b/classLibBBB_1_1AnalogToDigitalController.html
@@ -179,14 +179,12 @@ Static Public Member Functions</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_ae9099e54e15ebdf0213db4b7b87e3db4_cgraph.svg" width="510" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_ae9099e54e15ebdf0213db4b7b87e3db4_cgraph.svg" width="510" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_ae9099e54e15ebdf0213db4b7b87e3db4_icgraph.svg" width="1071" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_ae9099e54e15ebdf0213db4b7b87e3db4_icgraph.svg" width="1071" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -213,14 +211,12 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_a44f86e094ef5abaa24e6342ba51ba0c2_cgraph.svg" width="782" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_a44f86e094ef5abaa24e6342ba51ba0c2_cgraph.svg" width="782" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_a44f86e094ef5abaa24e6342ba51ba0c2_icgraph.svg" width="798" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_a44f86e094ef5abaa24e6342ba51ba0c2_icgraph.svg" width="798" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -256,8 +252,7 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_ac91d1341aaf8567024edfebac7db546e_icgraph.svg" width="798" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_ac91d1341aaf8567024edfebac7db546e_icgraph.svg" width="798" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -291,8 +286,7 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_a70fd232420c8ad366bd456e9db580369_icgraph.svg" width="1344" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1AnalogToDigitalController_a70fd232420c8ad366bd456e9db580369_icgraph.svg" width="1344" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
