--- a/classLibBBB_1_1Math_1_1LinearConverter_3_01float_01_4.html
+++ b/classLibBBB_1_1Math_1_1LinearConverter_3_01float_01_4.html
@@ -214,8 +214,7 @@ class LibBBB::Math::LinearConverter&lt; float &gt;</h3>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Math_1_1LinearConverter_3_01float_01_4_a3d04d3d46e57718648da2a1073be15e8_icgraph.svg" width="779" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classLibBBB_1_1Math_1_1LinearConverter_3_01float_01_4_a3d04d3d46e57718648da2a1073be15e8_icgraph.svg" width="779" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
