--- a/CommunicationProtocolParser_8h.html
+++ b/CommunicationProtocolParser_8h.html
@@ -94,14 +94,12 @@ $(document).ready(function(){initNavTree('CommunicationProtocolParser_8h.html','
 </div><div class="textblock"><div class="dynheader">
 Include dependency graph for CommunicationProtocolParser.h:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="CommunicationProtocolParser_8h__incl.svg" width="603" height="343"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="CommunicationProtocolParser_8h__incl.svg" width="603" height="343"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div><div class="textblock"><div class="dynheader">
 This graph shows which files directly or indirectly include this file:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="CommunicationProtocolParser_8h__dep__incl.svg" width="483" height="115"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="CommunicationProtocolParser_8h__dep__incl.svg" width="483" height="115"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="CommunicationProtocolParser_8h_source.html">Go to the source code of this file.</a></p>
