--- a/IOFactory_8cpp.html
+++ b/IOFactory_8cpp.html
@@ -100,8 +100,7 @@ $(document).ready(function(){initNavTree('IOFactory_8cpp.html','');});
 </div><div class="textblock"><div class="dynheader">
 Include dependency graph for IOFactory.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="IOFactory_8cpp__incl.svg" width="904" height="419"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="IOFactory_8cpp__incl.svg" width="904" height="419"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="IOFactory_8cpp_source.html">Go to the source code of this file.</a></p>
