--- a/classVehicleControl_1_1Control_1_1CommunicationProtocolParser.html
+++ b/classVehicleControl_1_1Control_1_1CommunicationProtocolParser.html
@@ -219,14 +219,12 @@ Here is the caller graph for this function:</div>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_1_1CommunicationProtocolParser_abdbab1c6376e364c7064e5c5b04f0168_cgraph.svg" width="1040" height="259"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_1_1CommunicationProtocolParser_abdbab1c6376e364c7064e5c5b04f0168_cgraph.svg" width="1040" height="259"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_1_1CommunicationProtocolParser_abdbab1c6376e364c7064e5c5b04f0168_icgraph.svg" width="526" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classVehicleControl_1_1Control_1_1CommunicationProtocolParser_abdbab1c6376e364c7064e5c5b04f0168_icgraph.svg" width="526" height="71"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
